# epics-containers.github.io

./: .copier-answers.yml  .gitignore  .gitleaks.toml  .gitremotes  .pre-commit-config.yaml  CONTRIBUTING.rst  DOCS-REVIEW.md  DOCS-REWRITE-PLAN.md  Dockerfile  Pipfile  README.md  README.rst  catalog-info.yaml  index.html  make_switcher.py  overview.rst  pyproject.toml  renovate.json  setup.cfg  setup.py  switcher.json
.devcontainer/: devcontainer.json  initializeCommand  postCreateCommand
.github/: CONTRIBUTING.md  CONTRIBUTING.rst
.github/ISSUE_TEMPLATE/: bug_report.md
.github/pages/: make_switcher.py
.github/workflows/: _check.yml  _dist.yml  _docs.yml  _pypi.yml  _release.yml  _test.yml  _tox.yml  ci.yml  code.yml  code_test.yml  docs.yml  org_docs.yml
.tox/docs/: .tox-config1
0.1/: .buildinfo  genindex.html  index.html  objects.inv  search.html
0.1.1/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
0.1.1/.doctrees/: environment.pickle  index.doctree
0.1.1/explanations/: net_protocols.html  strategy.html  whats_in.html
0.1.1/how-to/: debug.html  generic_iocs.html  kubernetes_cluster.html
0.1.1/reference/: cli.html  contributing.html  faq.html
0.1.1/tutorials/: introduction.html  manage_iocs.html  setup_k8s.html
0.1/.doctrees/: environment.pickle  index.doctree
0.1/_sources/: index.rst.txt
0.1/explanations/: strategy.html
0.1/how-to/: manage_iocs.html  setup_k8s.html
0.1/reference/: cli.html  contributing.html
0.1/tutorials/: installation.html
0.2/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
0.2/.doctrees/: environment.pickle  index.doctree
0.2/explanations/: net_protocols.html  strategy.html  whats_in.html
0.2/how-to/: debug.html  generic_iocs.html  kubernetes_cluster.html
0.2/reference/: cli.html  faq.html  (+1 more)
0.3/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
0.4/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
0.6/: genindex.html  index.html  objects.inv  search.html
0.7/: .buildinfo  genindex.html  index.html  objects.inv  overview.html  search.html  searchindex.js
0.8/: .buildinfo  genindex.html  index.html  objects.inv  overview.html  search.html
0.9/: .buildinfo  search.html  searchindex.js
2024-rework/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
2024.2.1/: .buildinfo  genindex.html  index.html  searchindex.js
3.0.0/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  overview.html  reference.html  search.html  searchindex.js  tutorials.html
3.4.0/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  overview.html  reference.html  search.html  tutorials.html
3.4.0b1/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  overview.html  reference.html  search.html  searchindex.js  tutorials.html
3.4.0b2/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  overview.html  reference.html  search.html  searchindex.js  tutorials.html
3.4.0b3/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  overview.html  reference.html  search.html  searchindex.js  tutorials.html
3.4.1/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  overview.html  reference.html  search.html  tutorials.html
3.4.1b1/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  overview.html  reference.html  search.html  searchindex.js  tutorials.html
3.6.0b1/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  overview.html  reference.html  search.html  tutorials.html
4.0.0/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  overview.html  reference.html  search.html  tutorials.html
4.0.0b1/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  overview.html  reference.html  search.html  searchindex.js  tutorials.html
4.1.0b1/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  overview.html  reference.html  search.html  searchindex.js  tutorials.html
4.2.0/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  overview.html  reference.html  search.html  searchindex.js  tutorials.html
dev/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/: _api.rst  conf.py  index.md  index.rst  overview.md  overview.rst  reference.md  tutorials.md
edge-containers/: .buildinfo  how-to.html  index.html  objects.inv  search.html  searchindex.js  tutorials.html
epics_containers/: __init__.py  __main__.py  cli.py
gilesknap-patch-1/: .buildinfo  genindex.html  index.html  objects.inv  search.html
gilesknap-patch-2/: .buildinfo  genindex.html  index.html  objects.inv  search.html
images/: k8s-epics.xcf  k8s-epics2.xcf
k8s-edge/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
k8s_epics_docs/: __init__.py  __main__.py  cli.py  k8s_epics_docs.py
main/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  overview.html  reference.html  search.html  searchindex.js  tutorials.html
more-tutorials/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
remove-dev/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
remove-tutorial-numbers/: .buildinfo  genindex.html  index.html  objects.inv  search.html
review01/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
split-devcontainer/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
subinsaji-patch-1/: .buildinfo  genindex.html  index.html  objects.inv  search.html
tests/: test_boilerplate_removed.py  test_cli.py  test_k8s_epics_docs.py
typo-fix/: .buildinfo  genindex.html  index.html  objects.inv  search.html
(+2542 files in other folders)
