[metadata]
name = k8s_epics_docs
description = One line description of your module
url = https://github.com/epics-containers/k8s_epics_docs
author = Giles Knap
author_email = giles.knap@diamond.ac.uk
license = Apache License 2.0
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
# install_requires =
#     numpy
#     scipy

# If you want to include data files in packages,
# either define [options.package_data] or
# set this to True and include a MANIFEST.in file.
include_package_data = False

[options.packages.find]
# Don't include our tests directory in the distribution
exclude = tests

[tool:pytest]
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
addopts =
    --tb=native -vv --flake8 --black --mypy --doctest-modules --doctest-glob="*.rst"
     --cov=k8s_epics_docs --cov-report term --cov-report xml:cov.xml

[coverage:run]
# This is covered in the versiongit test suite so exclude it here
omit = */_version_git.py
